VersionsDD: fix text alignment

--- a/src/assets/less/components/version-dropdown.less
+++ b/src/assets/less/components/version-dropdown.less
@@ -101,6 +101,7 @@
 					height: 100%;
 					padding: 10px;
 					color: #111a2c;
+					line-height: 20px;
 					white-space: nowrap;
 					cursor: pointer;
 					width: 100%;
